<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_action_bar_height"
    android:paddingStart="@dimen/top_action_bar_padding_horizontal"
    android:paddingEnd="@dimen/top_action_bar_padding_horizontal"
    android:background="@drawable/top_action_bar_scrim">

  <ImageView
      android:id="@+id/close_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:padding="@dimen/top_action_button_padding"
      android:contentDescription="@string/cd_close_button"
      app:srcCompat="@drawable/ic_close_vd_white_24"/>

  <ImageView
      android:id="@+id/settings_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:padding="@dimen/top_action_button_padding"
      android:contentDescription="@string/cd_settings_button"
      app:srcCompat="@drawable/ic_settings_vd_white_24"/>

  <ImageView
      android:id="@+id/flash_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toStartOf="@id/settings_button"
      android:padding="@dimen/top_action_button_padding"
      android:contentDescription="@string/cd_flash_button"
      app:srcCompat="@drawable/camera_flash"/>

</RelativeLayout>
